# cli-template-python

./: .gitignore  README.md  pyproject.toml
.github/workflows/: lint.yml  test.yml
src/cli/: __init__.py  main.py
tests/: conftest.py  test_main.py
